--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/EditProfile.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/EditProfile.cshtml
@@ -1,4 +1,4 @@
-@model UserDetailViewModel
+@model UserViewModel
 @{
     Layout = "Admin/_AdminLayout";
     ViewData["Title"] = "Profili Düzenle";
@@ -85,6 +85,12 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label asp-for="Note" class="col-sm-2 col-form-label"></label>
+                        <div class="col-sm-10">
+                            <textarea asp-for="Note" class="form-control"></textarea>
+                            </div>
+                        </div>
+                    <div class="form-group row">
                         <div class="offset-sm-2 col-sm-10">
                             <input type="submit" value="Kaydet" class="btn btn-info"/>
                         </div>
@@ -94,3 +100,4 @@
         </div>
     </div>
 </div> <!-- .content -->
+
