--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Shared/Admin/_AdminHeader.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Shared/Admin/_AdminHeader.cshtml
@@ -96,7 +96,7 @@
         </div>
 
         <div class="col-sm-5">
-            <div class="user-area dropdown">
+            <div class="user-area dropdown" style="background-color:turquoise ;">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span  style="line-height: 40px;"><u>Merhaba @User.Identity.Name</u></span>
                     <img class="user-avatar rounded-circle" src="~/admin/images/admin.jpg" alt="User Avatar">
