--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Address/AddressDetail.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Address/AddressDetail.cshtml
@@ -124,9 +124,7 @@
                                 </table>
                                 <div class="d-flex justify-content-end">
                                     <a asp-area="Admin" asp-controller="Address" asp-action="AddressUpdate" asp-route-addressId="@Model.Id" class="btn btn-primary btn-sm ml-2">Düzenle</a>
-                                    <form id="addressDeleteForm" asp-area="Admin" asp-controller="Address" asp-action="AddressDelete" asp-route-addressId="@Model.Id" method="post">
-                                    <button type="submit" class="btn btn-danger btn-sm ml-2" onclick="AlertDeleteAddress(@Model.Id);">Sil</button>
-                                    </form>
+                                    <button type="button" id="addressdeletebutton" class="btn btn-danger btn-sm ml-2" data-id="@Model.Id">Sil</button>
                                 </div>
                             </div>
                          </div>
@@ -135,53 +133,58 @@
     </div>
 </div> <!-- .content -->
 @section Scripts {
-            <script>
-            function AlertDeleteAddress(Id) {
-                           Swal.fire({
-                                 title: 'Adresi Silmek İstediğinizden Emin misiniz?',
-                                 text: "Silme işlemine onay verdikten sonra işlemi tekrardan geri alamazsınız!",
-                                 icon: 'warning',
-                                 showCancelButton: true,
-                                 confirmButtonColor: '#3085d6',
-                                 cancelButtonColor: '#d33',
-                                 confirmButtonText: 'Sil!',
-                                 cancelButtonText: 'İptal'
-                           }).then((result) => {
-                               if (result.isConfirmed) {
-                                   $.ajax({
-                                        url: '/Admin/Address/AddressDelete/' + Id,
-                                        type: "POST",
-                                        contentType: "application/json;charset=UTF-8",
-                                        dataType: "json",
-                                                success: function (deleteResult) {
-                                            console.log(deleteResult);
-                                                    if (deleteResult.success) {
-                                                       Swal.fire({
-                                                               title: 'Silindi?',
-                                                                text: "Adres Başarıyla Silindi",
-                                                                icon: 'success',
-                                                         });
-                                                       var userId = deleteResult.userId;
-                                                        //window.location = '@Url.Action("Profile", "Account" ,new {area="Admin"})?id=' + userId ;
-                                                    } else {
-                                                        Swal.fire({
-                                                                title: 'Hata',
-                                                                text: "Adres Silinemedi",
-                                                                 icon: 'error',
-                                                        });
-                                                    }
-                                                },
-                                                error: function (errormessage) {
-                                                        Swal.fire({
-                                                               title: 'Hata',
-                                                               text: "Adres Silinemedi",
-                                                               icon: 'error',
-                                                          });
-                                                }
-                                   });
-                               }
-                               return false;
-                           });
-                       }
-            </script>
+    <script>
+    (function($) {
+        $("#addressdeletebutton").on("click", function() {
+            var Id = $(this).attr("data-id");
+            Swal.fire({
+                title: 'Adresi Silmek İstediğinizden Emin misiniz?',
+                text: "Silme işlemine onay verdikten sonra işlemi tekrardan geri alamazsınız!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sil!',
+                cancelButtonText: 'İptal'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        type: "POST",
+                        url: '/Admin/Address/AddressDelete',
+                        data: {
+                            addressId: Id
+                        },
+                        dataType: "json",
+                        success: function(deleteResult) {
+                            if (deleteResult.success) {
+                                Swal.fire({
+                                    title: 'Silindi?',
+                                    text: "Adres Başarıyla Silindi",
+                                    icon: 'success',
+                                }).then((result) => {
+                                   var userId = deleteResult.userId;
+                                   window.location = '@Url.Action("Profile", "Account", new { area = "Admin" })?id=' + userId;
+                                })
+                            } else {
+                                Swal.fire({
+                                    title: 'Hata',
+                                    text: "Adres Silinemedi",
+                                    icon: 'error',
+                                });
+                            }
+                        },
+                        error: function(errormessage) {
+                            Swal.fire({
+                                title: 'Hata',
+                                text: "Adres Silinemedi",
+                                icon: 'error',
+                            });
+                        }
+                    });
+                }
+                return false;
+            });
+        });
+    })(jQuery);
+    </script>
 }
