--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/DeletedAccount/Index.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/DeletedAccount/Index.cshtml
@@ -1,6 +1,6 @@
 @{
     Layout = "Admin/_AdminLayout";
-    ViewData["Title"] = "Aktif Kullanıcılar";
+    ViewData["Title"] = "Silinmiş Kullanıcılar";
 }
 
 
@@ -124,13 +124,10 @@
         <div class="container-fluid">
             <div class="card">
                 <div class="card-header">
-                    <h2>Kullanıcılar</h2>
+                    <h2>Silinmiş Kullanıcılar</h2>
                 </div>
                 <div class="card-body">
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#userCrateModal" onclick="clearCreateModalTextBox();disabledCreateModalTextBox(false);">
-                        <i class="fa fa-plus">Kullanıcı Ekle</i>
-                    </button><br /><br />
-                    <table id="userTable" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width:100%">
+                    <table id="deletedUserTable" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width:100%">
                         <thead>
                             <tr class="btn-primary text-center">
                                 <th class="text-center">ID</th>
@@ -146,83 +143,8 @@
             </div>
         </div>
     </div> <!-- .content -->
-    <div id="userCreateModalForm">
-        <partial name="PartialViews/_UserCreateModalPartial" />
-    </div>
-    <div id="userDeleteModalForm">
-        <partial name="PartialViews/_UserDeleteModalPartial" />
-    </div>
-    <div id="roleModalPartial">
-        <partial name="PartialViews/_RoleModalPartial" />
-    </div>
-    @section Scripts {
+@section Scripts {
     <script src="~/lib/datatables/js/datatables.min.js"></script>
-    <script src="~/admin/js/UserOperation/UserTable.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function(event) {
-            var registerMessage = '@TempData["RegisterSuccess"]';
-            var editProfileMessage = '@TempData["EditProfileSuccess"]';
-            var editPasswordMessage = '@TempData["EditPasswordSuccess"]';
-            if (registerMessage) {
-                const Toast = Swal.mixin({
-                    toast: true,
-                    position: 'top-end',
-                    showConfirmButton: false,
-                    timer: 5000,
-                    timerProgressBar: true,
-                    didOpen: (toast) => {
-                        toast.addEventListener('mouseenter', Swal.stopTimer)
-                        toast.addEventListener('mouseleave', Swal.resumeTimer)
-                    }
-                })
-
-                Toast.fire({
-                    icon: 'success',
-                    title: 'Kullanıcı Kaydedildi',
-                    text: 'Kullanıcı Kaydetme İşlemi Başarıyla Gerçekleştirildi.',
-                })
-
-            }
-            if (editProfileMessage) {
-                const Toast = Swal.mixin({
-                    toast: true,
-                    position: 'top-end',
-                    showConfirmButton: false,
-                    timer: 5000,
-                    timerProgressBar: true,
-                    didOpen: (toast) => {
-                        toast.addEventListener('mouseenter', Swal.stopTimer)
-                        toast.addEventListener('mouseleave', Swal.resumeTimer)
-                    }
-                })
-
-                Toast.fire({
-                    icon: 'success',
-                    title: 'Kullanıcı Güncellendi',
-                    text: 'Kullanıcı Güncelleme İşlemi Başarıyla Gerçekleştirildi.',
-                })
-
-            }
-            if (editPasswordMessage) {
-                const Toast = Swal.mixin({
-                    toast: true,
-                    position: 'top-end',
-                    showConfirmButton: false,
-                    timer: 5000,
-                    timerProgressBar: true,
-                    didOpen: (toast) => {
-                        toast.addEventListener('mouseenter', Swal.stopTimer)
-                        toast.addEventListener('mouseleave', Swal.resumeTimer)
-                    }
-                })
-
-                Toast.fire({
-                    icon: 'success',
-                    title: 'Şifre Güncellendi',
-                    text: 'Şifre Güncelleme İşlemi Başarıyla Gerçekleştirildi.',
-                })
-
-            }
-        });
-    </script>
+    <script src="~/admin/js/DeletedAccount/DeletedUserTable.js"></script>
 }
+
