--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Shared/Admin/_AdminLeftPanel.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Shared/Admin/_AdminLeftPanel.cshtml
@@ -26,7 +26,7 @@
                                 <i class="fa fa-user"></i><a asp-area="Admin" asp-controller="UserOperation"  asp-action="Index"  class="nav-link" >Aktif Kullanıcılar</a>
                             </li>
                             <li>
-                                <i class="fa fa-user"></i><a asp-area="Admin" asp-controller="UserOperation"  asp-action=""  class="nav-link" >Silinmiş Kullanıcılar</a>
+                                <i class="fa fa-user"></i><a asp-area="Admin" asp-controller="DeletedAccount"  asp-action="Index"  class="nav-link" >Silinmiş Kullanıcılar</a>
                             </li>
                             <li>
                                 <i class="fa fa-cogs"></i><a asp-area="Admin" asp-controller="Role"  asp-action="Index" class="nav-link" >Rol İşlemleri</a>
