--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Address/AddressAdd.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Address/AddressAdd.cshtml
@@ -129,7 +129,7 @@
                                                     <input asp-for="DefaultAddress" class="mt-3"/>
                                                 </div>
                                             </div>
-                                            <input type="hidden" asp-for="UserId" value="@TempData["userId"]" class="form-control"/>
+                                            <input type="hidden" asp-for="UserId" class="form-control"/>
                                             <div class="form-group row">
                                                 <div class="offset-sm-3 col-sm-9">
                                                     <input type="submit" value="Kaydet" class="btn btn-primary btn-sm"/>
