--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using ECommerce.Business.Dtos.UserDtos
 @using ECommerce.Business.Dtos.RoleDtos
 @using ECommerce.Business.Dtos.AddressDtos
+@using ECommerce.Business.Dtos.UserImageDtos
 @using ECommerce.Entities.Concrete.Identity.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
