--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Shared/Components/UserSummaryCard/Default.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Shared/Components/UserSummaryCard/Default.cshtml
@@ -1,8 +1,34 @@
+@using ECommerce.Shared.Entities.Enums
 @model UserCardSummaryDto
 <div class="card mb-4">
     <div class="card-body text-center">
-        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
-             class="rounded-circle img-fluid" style="width: 150px;">
+        @if (Model.GenderType == GenderEnum.Erkek && ViewBag.UserImageCount==0 || Model.GenderType == GenderEnum.Erkek 
+             && ViewBag.UserImageCount>0 && ViewBag.UserImageProfilImagePath==null)
+        {
+            <img src="~/admin/images/avatar/maleuseravatar.png" alt="avatar"
+                 id="profilPhoto" class="rounded-circle img-fluid" style="width: 150px;">
+            <button type="button" class="btn btn-outline-warning mr-2 rounded">Profil Fotoğrafı Ekle</button>
+        }
+        else if(Model.GenderType == GenderEnum.Kadın && ViewBag.UserImageCount==0 || Model.GenderType == GenderEnum.Kadın 
+                && ViewBag.UserImageCount>0 && ViewBag.UserImageProfilImagePath==null)
+        {
+            <img src="~/admin/images/avatar/femaleuseravatar.png" alt="avatar"
+                 id="profilPhoto" class="rounded-circle img-fluid" style="width: 150px;">
+            <button type="button" class="btn btn-outline-warning mr-2 rounded">Profil Fotoğrafı Ekle</button>
+        }
+        else if(Model.GenderType == GenderEnum.Belirtilmemiş && ViewBag.UserImageCount==0 || Model.GenderType == GenderEnum.Belirtilmemiş 
+                && ViewBag.UserImageCount>0 && ViewBag.UserImageProfilImagePath==null)
+        {
+            <img src="~/admin/images/avatar/unspecifieduseravatar.png" alt="avatar"
+                 id="profilPhoto" class="rounded-circle img-fluid" style="width: 150px;">
+            <button type="button" class="btn btn-outline-warning mr-2 rounded">Profil Fotoğrafı Ekle</button>
+        }
+        else if( ViewBag.UserImageCount>0 && ViewBag.UserImageProfilImagePath!=null)
+        {
+            <img src="@ViewBag.UserImageProfilImagePath" alt="avatar"
+                 id="profilPhoto" class="rounded-circle img-fluid" style="width: 150px;">
+            <button type="button" class="btn btn-outline-warning mr-2 rounded">Profil Fotoğrafı Değiştir</button>
+        }
         <h5 class="my-3">@Model.FirstName @Model.LastName</h5>
         <p class="text-muted mb-1">@Model.UserName</p>
         <p class="text-muted mb-1">@Model.Email</p>
