--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Shared/Components/UserImageCard/Default.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Shared/Components/UserImageCard/Default.cshtml
@@ -20,8 +20,8 @@
                                         </a>
                                     </div>
                                     <div class="heading_section d-flex justify-content-center py-2">
-                                        <button type="button" class="btn btn-outline-success mr-2 rounded">Profil Yap</button>
-                                        <button type="button" class="btn btn-outline-danger ms-1 rounded">Sil</button>
+                                        <button type="button" class="btn btn-outline-success mr-2 rounded userImageSetProfilButton" data-userid="@image.UserId" data-id="@image.Id">Profil Yap</button>
+                                        <button type="button" class="btn btn-outline-danger mr-2 rounded userImageDeleteProfilButton" data-userid="@image.UserId" data-id="@image.Id">Sil</button>
                                     </div>
                                 </div>
                             }
