--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Address/AddressAdd.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Address/AddressAdd.cshtml
@@ -5,6 +5,34 @@
     Layout = "Admin/_AdminLayout";
     ViewBag.Title = "Adres Ekle";
 }
+@section Style {
+    <style>
+      /*------------------------------------------------------------------
+          17. Gallery Section   
+      -------------------------------------------------------------------*/
+      
+      .gallery_section_inner .column {
+          background: #fff;
+          box-shadow: 0 0 13px -10px #000;
+          overflow: hidden;
+      }
+      
+      .heading_section {
+          border-top: solid #1ed085 2px;
+          background: #15283c;
+      }
+      
+      .heading_section h4 {
+          color: #fff;
+          margin: 0;
+          font-weight: 200;
+          text-align: center;
+          padding: 16px 0 16px;
+          font-size: 15px;
+      }
+   </style>
+    <link href="~/lib/fancybox/css/jquery.fancybox.css" rel="stylesheet" />
+}
 <div class="breadcrumbs">
         <div class="col-sm-4">
             <div class="page-header float-left">
@@ -148,6 +176,8 @@
 
 @section Scripts {
     <script src="~/js/inputmask/jquery.inputmask.min.js"></script>
+    <script src="~/lib/fancybox/js/jquery.fancybox.min.js"></script>
+    <script src="~/admin/js/UserImage/userImage.js"></script>
     <script type="text/javascript">
            (function($) {
                $("#phonemasc").inputmask("+\\90(999)999-99-99");
