--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Address/AddressUpdate.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Address/AddressUpdate.cshtml
@@ -31,7 +31,7 @@
           font-size: 15px;
       }
    </style>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
+    <link href="~/lib/fancybox/css/jquery.fancybox.css" rel="stylesheet" />
 }
 
 <div class="breadcrumbs">
@@ -179,7 +179,8 @@
 
 @section Scripts {
     <script src="~/js/inputmask/jquery.inputmask.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+    <script src="~/lib/fancybox/js/jquery.fancybox.min.js"></script>
+    <script src="~/admin/js/UserImage/userImage.js"></script>
         <script type="text/javascript">
                (function($) {
                    $("#phonemasc").inputmask("+\\90(999)999-99-99");
