--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Address/AddressAdd.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Address/AddressAdd.cshtml
@@ -163,7 +163,8 @@
                                             <input type="hidden" asp-for="UserId" class="form-control"/>
                                             <div class="form-group row">
                                                 <div class="offset-sm-3 col-sm-9">
-                                                    <input type="submit" value="Kaydet" class="btn btn-primary btn-sm"/>
+                                                    <input type="submit" value="Kaydet" class="btn btn-success btn-sm"/>
+                                                    <a asp-area="Admin" asp-controller="Account" asp-action="Profile" asp-route-id="@Model.UserId" class="btn btn-primary btn-sm ml-2">Profil</a>
                                                 </div>
                                             </div>
                                         </form>
