--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/UpdatePassword.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/UpdatePassword.cshtml
@@ -11,13 +11,19 @@
             <div class="form-group row offset-sm-2 col-sm-10 text-danger" asp-validation-summary="All">
             </div>
             <div class="form-group row">
-                <label asp-for="Password" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <input type="email" asp-for="Password" class="form-control"/>
+                <label asp-for="Password" class="col-sm-3 col-form-label"></label>
+                <div class="col-sm-9">
+                    <input type="password" asp-for="Password" class="form-control"/>
                 </div>
             </div>
             <div class="form-group row">
-                <div class="offset-sm-2 col-sm-10">
+                <label asp-for="RePassword" class="col-sm-3 col-form-label"></label>
+                <div class="col-sm-9">
+                    <input type="password" asp-for="RePassword" class="form-control"/>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="offset-sm-3 col-sm-9">
                     <input type="submit" value="Şifreyi Güncelle" class="btn btn-warning"/>
                 </div>
             </div>
