--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/EditProfile.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/EditProfile.cshtml
@@ -12,6 +12,17 @@
           Fancybox Gallery Section   
       -------------------------------------------------------------------*/
 
+      .gallery_section_inner .column {
+          background: #fff;
+          box-shadow: 0 0 13px -10px #000;
+          overflow: hidden;
+      }
+      
+      .heading_section {
+          border-top: solid #1ed085 2px;
+          background: #15283c;
+      }
+      
       .heading_section h4 {
           color: #fff;
           margin: 0;
